2005-12-30 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b6

 * Fix: Item Owner couldnt delete their own item when 
        they had no delete permission for the complete album.

 * Fix: Item Owner couldnt watermark their own pictures.

 * Fix: Item Owner couldnt resize their own pictures.

 * Fix: Item Owner permissions in view_album and view_photo were totally broken.

 * Change: Layout in layout/watermarkform.inc

 * Change: More text when using form upload. Also layout enhancement for dynamic fields.

 * Change: Reduced output in non-debug when adding items.

 * Change: Layout in user_preferences.php

2005-12-30 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b5

 * Fix: If user choosed "no caption" on upload, this setting was ignored.
   Thanks to jobeus from forum.

 * Fix: Removed deprecated Call-time pass-by-reference in watermarkform.
   Thanks to Lypsik from forum.

2005-12-29 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b4

 * Fix: Added the two new help files to approved file list.
   Thanks Kai.

2005-12-29 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b3

 * New: Added 2 new options for highlight and thumbnail quality.
        Users complained about new fix quality settings.

   -> Config Version bump.

2005-12-29 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b2

 * Fix: Missing quotation broke previous thumbs in microthumb nav.
   Thanks to Perrin from forums.

 * Fix: Missing ; after &nbsp microthumb nav.
 
2005-12-28 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b1

 * Fix: gTranslate relied on gettext, now works without.
   Thanks to alindeman.

 * Change: removed last ngettext() call, use gTranslate instead.

2005-12-28 Chris Kelly <ckdake@ckdake.com> 1.5.2-RC1

 * Release: 1.5.2-RC1

2005-12-28 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b61

 * Fix: Use full/resized prev in microthumbs
   Thanks to Kai.

2005-12-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b60

 * Fix: Aurotated photos (exif) were rotated again on copy/move.
