@@ -1,3 +1,7 @@
+2005-12-31 Kai Tomalik <kai@gallery-addons.com> 1.5.2-RC2-cvs-b7
+
+ * Fix: No hardcoded table prefix for mambo and Joomla!
+
 2005-12-30 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b6
 
  * Fix: Item Owner couldnt delete their own item when 
